# ScientificQuantities

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  PhysicalConstants.hpp  README.md  SQTest.cpp  ScientificQuantities.hpp  constexpr_test.cpp  main.cpp
include/: ScientificQuantities.hpp
test/: test.cpp  test_constexpr.cpp
